# linkletter

./: .gitignore  Cargo.toml  README.md  flake.nix
config/: settings.json  settings.prod.json  settings.test.json
db/: schema.db
db/migrations/: 001_schema_init.sql  002_url_index.sql  003_subsec_visit_timestamp.sql
src/: database.rs  main.rs  service.rs  settings.rs
src/database/: document.rs  url.rs  visit.rs
src/service/: document.rs  documents.rs  url.rs  urls.rs  visit.rs
src/service/documents/: analytics.rs  urls.rs  visits.rs
src/service/urls/: visits.rs
