[package]
name = "linkletter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
axum = { version = "0.8.9", features = ["macros"] }
config = "0.15.25"
hyper = "1.10.1"
serde = "1.0.228"
sqlx = { version = "0.9.0", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.4", features = ["serde", "std", "v4", "v7"] }
